{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 74,
  "lineage": "745a10b4-d501-7c2f-87d5-73762c8d467e",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb_fast_food_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:289212747056:loadbalancer/app/ff-cliente-alb-fast-food-app/345c859c090345e0",
            "arn_suffix": "app/ff-cliente-alb-fast-food-app/345c859c090345e0",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ff-cliente-alb-fast-food-app-1292469210.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:289212747056:loadbalancer/app/ff-cliente-alb-fast-food-app/345c859c090345e0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ff-cliente-alb-fast-food-app",
            "preserve_host_header": false,
            "security_groups": [
              "sg-045515a8381388922",
              "sg-08d49485c0c3d3bef",
              "sg-0df858560aa7a4698"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-052bca6bb5af799b5"
              },
              {
                "subnet_id": "subnet-0975413e62f9ae778"
              }
            ],
            "subnets": [
              "subnet-052bca6bb5af799b5",
              "subnet-0975413e62f9ae778"
            ],
            "tags": {
              "Environment": "ff-cliente",
              "Name": "ff-cliente-alb-fast_food_app"
            },
            "tags_all": {
              "Environment": "ff-cliente",
              "Name": "ff-cliente-alb-fast_food_app"
            },
            "vpc_id": "vpc-0b36947dc0287234c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ecs.aws_security_group.web_inbound_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "fast_food_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:289212747056:listener/app/ff-cliente-alb-fast-food-app/345c859c090345e0/4ada835fc777dbb1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:289212747056:targetgroup/ff-cliente-alb-target-group-5860/d2ecb712158a6318",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:289212747056:listener/app/ff-cliente-alb-fast-food-app/345c859c090345e0/4ada835fc777dbb1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:289212747056:loadbalancer/app/ff-cliente-alb-fast-food-app/345c859c090345e0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_alb.alb_fast_food_app",
            "module.ecs.aws_alb_target_group.alb_target_group",
            "module.ecs.aws_security_group.web_inbound_sg",
            "module.ecs.random_id.target_group_sufix"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:289212747056:targetgroup/ff-cliente-alb-target-group-5860/d2ecb712158a6318",
            "arn_suffix": "targetgroup/ff-cliente-alb-target-group-5860/d2ecb712158a6318",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:289212747056:targetgroup/ff-cliente-alb-target-group-5860/d2ecb712158a6318",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ff-cliente-alb-target-group-5860",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b36947dc0287234c"
          },
          "dependencies": [
            "module.ecs.random_id.target_group_sufix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:289212747056:security-group/sg-00ff2426e7a6ee512",
            "description": "Allow egress from container",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ff2426e7a6ee512",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ff-cliente-ecs-service-sg",
            "name_prefix": "",
            "owner_id": "289212747056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "ff-cliente",
              "Name": "ff-cliente-ecs-service-sg"
            },
            "tags_all": {
              "Environment": "ff-cliente",
              "Name": "ff-cliente-ecs-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b36947dc0287234c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_inbound_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:289212747056:security-group/sg-0df858560aa7a4698",
            "description": "Allow HTTP from Anywhere into ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df858560aa7a4698",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ff-cliente-web-inbound-sg",
            "name_prefix": "",
            "owner_id": "289212747056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ff-cliente-web-inbound-sg"
            },
            "tags_all": {
              "Name": "ff-cliente-web-inbound-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b36947dc0287234c"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}